--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,11 @@ packer/packer_cache/
 terraform/.terraform/
 terraform/.terraform.lock.hcl
 terraform/terraform.tfstate
-terraform/terraform.tfstate.backup
-terraform/terraform.tfvars
+# terraform/terraform.tfstate.backup
+# terraform/terraform.tfvars
 terraform/override.tf
 terraform/override.tf.json
-terraform/*.tfvars
+# terraform/*.tfvars
 terraform/.terraformrc
 terraform/terraform.rc
 
@@ -22,8 +22,8 @@ crash.log
 crash.*.log
 
 # Exclude all .tfvars files, which are likely to contain sensitive data
-*.tfvars
-*.tfvars.json
+# *.tfvars
+# *.tfvars.json
 
 # Ignore override files as they are usually used for local development
 override.tf
@@ -40,3 +40,5 @@ terraform.rc
 
 # Ignore any local backup files
 *.backup 
+
+/packer/* 
